@@ -36,35 +36,33 @@
   '(font-lock-comment-face font-lock-doc-face)
   "Faces corresponding to text in programming-mode buffers.")
 
+(defvar predictive-prog-mode-main-dict nil)
+
 (defun activate-predictive-inside-comments (start end len)
   "Looking at symbol at point and activate the `predictive-mode'
 if there a string or a comment."
   (save-excursion
     (let ((f (get-text-property (point) 'face)))
+      ;; skip message output
       (if (memq f predictive-prog-text-faces)
-          (predictive-mode 1)
-        (predictive-mode -1)))))
+          (setq predictive-main-dict predictive-prog-mode-main-dict)
+        (setq predictive-main-dict nil)))))
 
 (defun predictive-prog-mode ()
   "Enable the `predictive-mode' inside strings and comments
 only, like `flyspell-prog-mode'."
   (interactive)
   (when (fboundp 'predictive-mode)
+    (make-local-variable 'predictive-main-dict)
+    (set (make-local-variable 'predictive-prog-mode-main-dict) predictive-main-dict)
     (if (find 'activate-predictive-inside-comments after-change-functions)
         (progn
           (remove-hook 'after-change-functions 'activate-predictive-inside-comments t)
           (predictive-mode -1))
       (progn
         (set (make-local-variable 'predictive-use-auto-learn-cache) nil)
+        (set (make-local-variable 'predictive-dict-autosave-on-kill-buffer) nil)
+        (predictive-mode 1)
         (add-hook 'after-change-functions 'activate-predictive-inside-comments nil t)))))
-
-;; (defun rails-predictive-prog-mode-feature:install ()
-;;   (when (fboundp 'predictive-mode)
-;;     (defadvice ruby-electric-space (around ruby-electric-space-with-completion-ui first (arg) activate)
-;;       "Override the ruby <space> command if predictive-mode enabled."
-;;       (if (memq (get-text-property (point) 'face) '(font-lock-comment-face font-lock-doc-face))
-;;           (completion-self-insert)
-;;         ad-do-it))
-;;     (add-hook 'ruby-mode-hook 'predictive-prog-mode)))
 
 (provide 'predictive-prog-mode)
